--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
     "background": {
         "service_worker": "background.js"
     },
-    "permissions": ["storage"],
+    "permissions": ["storage", "tabs"],
     "action": {}
+    
 }
